--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <option value="Out of School Youth & Adult">Out of School Youth & Adult</option>
                             <option value="Educator">Educator</option>
                             <option value="Student">Student</option>
-                            <option value="PWDs">PWD's</option>
+                            <option value="PWDs">PWDs</option>
                             <option value="Women">Women</option>
                             <option value="Senior Citizen">Senior Citizen</option>
                             <option value="OFW">OFW</option>
@@ -290,6 +290,8 @@
                             <select id="servicePurpose" name="servicePurpose" required class="w-full pl-3 pr-8 py-2 text-sm bg-zinc-50 border border-zinc-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500/20 focus:border-blue-500 hover:border-zinc-300 transition-all appearance-none text-zinc-700 cursor-pointer">
                                 <option value="">Select...</option>
                                 <option value="Training">Training</option>
+                                <option value="Training">Research/Study</option>
+                                <option value="Training">Avail FreeWifi4All</option>
                                 <option value="Inquiry">Inquiry</option>
                                 <option value="Meeting">Meeting</option>
                                 <option value="Co-working">Co-working</option>
